RESOLVED FIXED65793
Painting of fixed background images is wrong in composited layers
https://bugs.webkit.org/show_bug.cgi?id=65793
Summary Painting of fixed background images is wrong in composited layers
Abel
Reported 2011-08-05 15:02:35 PDT
Elements with a fixed background image behave strange when an absolute positioned element has an animated transformation on hover. For example, the position of the background image in the div elements in the supplied changes position moves away during the animation, and returns to it's original position when the animation is finished. Hover over the black square to reproduce the bug.
Attachments
HTML file to recreate the bug (653 bytes, text/html)
2011-08-05 15:03 PDT, Abel
no flags
Patch (24.42 KB, patch)
2013-06-15 13:19 PDT, Simon Fraser (smfr)
sam: review+
Abel
Comment 1 2011-08-05 15:03:59 PDT
Created attachment 103119 [details] HTML file to recreate the bug
Simon Fraser (smfr)
Comment 2 2011-08-06 19:21:29 PDT
Yeah, fixed backgrounds and animation don't play nicely together. Making them work would be very hard (or at least slow things down horribly).
Abel
Comment 3 2011-08-07 00:25:31 PDT
(In reply to comment #2) > Yeah, fixed backgrounds and animation don't play nicely together. Making them work would be very hard (or at least slow things down horribly). I understand that animating elements with a fixed background is hard, but the bug also occurs when elements without a fixed background are animated. No matter where the animated element is on the page, all the containers with fixed background display strange behavior.
Simon Fraser (smfr)
Comment 4 2013-06-15 13:04:05 PDT
*** Bug 102381 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5 2013-06-15 13:04:16 PDT
*** Bug 110552 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2013-06-15 13:05:23 PDT
*** Bug 117659 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 7 2013-06-15 13:19:40 PDT
Sam Weinig
Comment 8 2013-06-15 20:44:56 PDT
Comment on attachment 204773 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204773&action=review > Source/WebCore/rendering/RenderBoxModelObject.cpp:1227 > + // FIXME: transforms spec says that fixed backgrounds behave like scroll inside transforms. Since we have a bug on this, you should add the link. > Source/WebCore/rendering/RenderBoxModelObject.h:203 > + { } I prefer these on separate lines :(.
Simon Fraser (smfr)
Comment 9 2013-06-16 14:54:25 PDT
Note You need to log in before you can comment on or make changes to this bug.